# rust-toy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
advanced/axum-start/: Cargo.toml
advanced/axum-start/assets/: scripts.ts
advanced/axum-start/src/: axum02_get.rs  axum03_post.rs  axum04_json.rs  axum05_error.rs  axum06_askama.rs
advanced/concurrency/: Cargo.toml
advanced/concurrency/examples/: condvar.rs  dummy_actor.rs  metrics.rs  naive_lock.rs
advanced/concurrency/src/: lib.rs
advanced/generics/src/: auth.rs  iterator.rs  lib.rs
advanced/network/: Cargo.toml  README.md
advanced/network/examples/: async_client.rs  async_listener.rs  framed_client.rs  framed_server.rs  rocket_server.rs
advanced/trait_objects/: Cargo.toml
advanced/trait_objects/benches/: trait_object.rs
advanced/trait_objects/src/: lib.rs  service.rs  trait_object_in_fn.rs
algorithms/array/: README.md
algorithms/array/src/: main.rs
algorithms/sort/: Cargo.toml  README.md
algorithms/sort/src/: bubble_sort.rs  selection_sort.rs
algorithms/string-algo/: Cargo.toml
algorithms/string-algo/src/: bf.rs
exercise/: Cargo.toml
exercise/axum/: Cargo.toml
exercise/axum/examples/: basic.rs
exercise/axum/my-app/: package-lock.json
exercise/con_utils/src/: channel.rs
exercise/httpie/: Cargo.toml  README.md
exercise/httpie/examples/: cli.rs  cli_verify.rs
exercise/httpie/src/: main.rs
exercise/metro_encode/: Cargo.toml  README.md
exercise/metro_encode/src/: main.rs
exercise/prost-example/: Cargo.toml  build.rs  person.proto
exercise/prost-example/examples/: person.rs
exercise/prost-example/src/pb/: mod.rs  person.rs
exercise/scrape_url/: Cargo.toml
exercise/scrape_url/src/: main.rs
grammar/async-demo/: Cargo.toml
grammar/async-demo/examples/: tokio_clock.rs  tokio_read.rs  tokio_task.rs  tokio_write.rs
grammar/async-demo/src/: main.rs
grammar/basic-types/: Cargo.toml
grammar/basic-types/src/: 01_expression.rs  02_function.rs
grammar/closure/examples/: closure_size.rs  fn_mut.rs  fn_once.rs  fn_return.rs  thread.rs
grammar/control-flow/src/: main.rs
grammar/data_structure/: Cargo.toml
grammar/data_structure/src/: boxed.rs  btreemap.rs  hashmap1.rs  hashmap2.rs  slice1.rs  slice2.rs  slice3.rs  slice4.rs  slice5.rs
grammar/generic/src/: main.rs
grammar/macro-demo/: Cargo.toml
grammar/macro-demo/examples/: macro_add.rs
grammar/macro-demo/src/: main.rs
grammar/method/: Cargo.toml
grammar/method/examples/: rectangle.rs
grammar/pattern-matching/: Cargo.toml
grammar/pattern-matching/examples/: 01_match.rs  02_ip.rs  03_pattern-binding.rs  04_match-var.rs
grammar/smart-pointers/: Cargo.toml
grammar/smart-pointers/src/: allocator.rs  borrow.rs  cow1.rs  cow2.rs  guard.rs  rc_dag.rs  refcell.rs  refcell_dag.rs
grammar/string/: Cargo.toml  README.md
grammar/string/examples/: concatenate.rs  delete.rs  insert.rs  push.rs  replace.rs  slice.rs  transform.rs
grammar/string/src/: main.rs
grammar/struct-enum/: Cargo.toml
grammar/struct-enum/examples/: enum_size.rs  struct_size.rs
grammar/struct-enum/src/: main.rs
grammar/trait-demo/: Cargo.toml
grammar/trait-demo/examples/: add.rs  animal.rs  clone_trait.rs  drop_trait.rs  file.rs  formatter.rs  into_trait.rs  parse.rs  summary.rs  sync_trait.rs  write.rs
grammar/tuple/src/: main.rs
grammar/variables/src/: main.rs
grammer/: .gitignore  Cargo.toml
grammer/basic-types/src/: 01_expression.rs
grammer/struct-enum/src/: main.rs
grammer/variables/src/: main.rs
