[workspace]

members = [

    "grammar/variables",
    "grammar/basic-types",
    "grammar/struct-enum",
    "grammar/control-flow",
    "grammar/string",
    "grammar/tuple",
    "grammar/pattern-matching",
    "grammar/method",
    "grammar/generic",
    "grammar/trait-demo",
    "grammar/smart-pointers",
    "grammar/data_structure",

    "exercise/scrape_url",
    "exercise/httpie",
    "exercise/metro_encode",
    "exercise/prost-example",
    "exercise/axum",

    "advanced/generics",
    "advanced/trait_objects"
]
