[workspace]

members = [

    "grammar/variables",
    "grammar/basic-types",
    "grammar/struct-enum",
    "grammar/control-flow",
    "grammar/string",
    "grammar/tuple",
    "grammar/pattern-matching",
    "grammar/method",
    "grammar/generic",
    "grammar/trait-demo",
    "grammar/smart-pointers",
    "grammar/data_structure",
    "grammar/closure",
    "grammar/async-demo",
    "grammar/macro-demo",

    "exercise/scrape_url",
    "exercise/httpie",
    "exercise/metro_encode",
    "exercise/prost-example",
    "exercise/axum",
    "exercise/con_utils",

    "advanced/generics",
    "advanced/trait_objects",
    "advanced/concurrency",
    "advanced/axum-start",

    "algorithms/array",
    "algorithms/sort", 
    "algorithms/string-algo", 

]
