[package]
name = "axum-start"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum01_start"
path = "src/axum01_start.rs"

[[bin]]
name = "axum02_get"
path = "src/axum02_get.rs"


[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
