[package]
name = "axum-start"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum01_start"
path = "src/axum01_start.rs"

[[bin]]
name = "axum02_get"
path = "src/axum02_get.rs"

[[bin]]
name = "axum03_post"
path = "src/axum03_post.rs"


[[bin]]
name = "axum04_json"
path = "src/axum04_json.rs"

[[bin]]
name = "axum05_error"
path = "src/axum05_error.rs"

[[bin]]
name = "axum06_askama"
path = "src/axum06_askama.rs"

[dependencies]
askama = "0.12"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
