[package]
name = "trait_objects"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trait_object_in_fn"
path = "src/trait_object_in_fn.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "trait_object"
harness = false