[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "cli"

[[example]]
name = "cli_verify"

[dependencies]
anyhow = "1.0.72"                                      # 错误处理
clap = { version = "3", features = ["derive"] }        # 命令行解析
colored = "2.0.4"                                      # 命令行终端多彩显示
jsonxf = "1.1.1"                                       # JSON pretty print 格式化
mime = "0.3.17"                                        # 处理 mime 类型
reqwest = { version = "0.11.18", features = ["json"] } # HTTP 客户端
tokio = { version = "1.29.1", features = ["full"] }    # 异步处理库
syntect = "4"
