[package]
name = "data_structure"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slice1"
path = "src/slice1.rs"

[[bin]]
name = "slice2"
path = "src/slice2.rs"

[[bin]]
name = "slice3"
path = "src/slice3.rs"

[[bin]]
name = "slice4"
path = "src/slice4.rs"

[[bin]]
name = "slice5"
path = "src/slice5.rs"

[[bin]]
name = "boxed"
path = "src/boxed.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
