[package]
name = "smart-pointers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "cow1"
path = "src/cow1.rs"

[[bin]]
name = "cow2"
path = "src/cow2.rs"

[[bin]]
name = "guard"
path = "src/guard.rs"

[[bin]]
name = "rc_dag"
path = "src/rc_dag.rs"

[[bin]]
name = "refcell"
path = "src/refcell.rs"

[[bin]]
name = "refcell_dag"
path = "src/refcell_dag.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1"
